Shifted from Dev Repo - DB BUG ISSUE - TAG-21 - DAY-21

--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ pillow = "*"
 django-widget-tweaks = "*"
 django-anymail = "*"
 django-ckeditor = "*"
+django-phonenumber-field = {extras = ["phonenumberslite"], version = "*"}
 
 [dev-packages]
 
