Minor bugs remove - PDFtoDOCX Project - Initialized Almost Completed - Styling Left

--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ django-anymail = "*"
 django-ckeditor = "*"
 django-phonenumber-field = {extras = ["phonenumberslite"], version = "*"}
 djangorestframework = "*"
+pdf2docx = "*"
 
 [dev-packages]
 
