django-environ pkg - Added & updated profile content

--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ django-ckeditor = "*"
 django-phonenumber-field = {extras = ["phonenumberslite"], version = "*"}
 djangorestframework = "*"
 pdf2docx = "*"
+django-environ = "*"
 
 [dev-packages]
 
