--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ django-phonenumber-field = {extras = ["phonenumberslite"], version = "*"}
 djangorestframework = "*"
 pdf2docx = "*"
 django-environ = "*"
+gunicorn = "*"
 
 [dev-packages]
 
