--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,8 @@ pdf2docx = "*"
 django-environ = "*"
 gunicorn = "*"
 whitenoise = "*"
+django-storages = {extras = ["boto3"], version = "*"}
+django-cors-headers = "*"
 
 [dev-packages]
 
