--- a/Pipfile
+++ b/Pipfile
@@ -22,6 +22,7 @@ django-storages = "*"
 django-backblazeb2-storage = "*"
 beautifulsoup4 = "*"
 selenium = "*"
+webdriver-manager = "*"
 
 [dev-packages]
 
